# vibechord

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE_v2.md  CONTRIBUTING.md  MANUAL_TESTING_REQUIRED.md  README.md  STACK.md  mkdocs.yml  operator-profile.yaml  pyproject.toml
design/: AGENT-INTEGRATION-VISION.md  ARCHITECTURE.md  BACKLOG.md  CLI-UX-VISION.md  CONFIG_UX_VISION.md  DOCS-UX-VISION.md  NL-UX-VISION.md  README.md  RFC-ADR-ROADMAP.md  TUI-UX-VISION.md  VISION.md  VISION_v2.md  WORKFLOW-UX-VISION.md  adr-0104-implementation-plan.md  adr-0105-implementation-plan.md  agent-turn-summary-implementation-plan.md  attached-turn-recovery-implementation-plan.md  critique-arch-round-1.md  critique-arch-round-2.md  critique-arch-round-3.md  critique-round-1.md  critique-round-2.md  critique-round-3.md  resident-reconciler-implementation-plan.md  user-stories-and-surface-model.md
docs/: README.md  integrations.md  quickstart.md  tui-forensic-workflow.md  tui-workbench.md
policies/: ENGINEERING_RULES.md  README.md  architecture.md  documentation.md  engineering.md  verification.md
scripts/: monitor_operation.zsh  verify_public_release.py
tests/: test_acp_permissions.py  test_acp_sdk_connection.py  test_acp_session_runner.py  test_adapter_factory.py  test_adapter_runtime.py  test_adr_0119_cli_line_budget.py  test_adr_0119_control_line_budget.py  test_agent_cli.py  test_agent_domain_contracts.py  test_agent_result_service.py  test_agent_run_supervisor.py  test_agent_session_manager.py  test_agent_session_runtime.py  test_aggregate_query_adapter.py  (+89 more)
(+590 files in other folders)
