[project]
name = "agent-operator"
version = "0.1.0"
description = "Minimalist Python operator for orchestrating external agents."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "agent-client-protocol>=0.9.0",
  "anyio>=4.9.0",
  "dishka>=1.5.0",
  "httpx>=0.28.0",
  "oauth-cli-kit>=0.1.3",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.8.0",
  "PyYAML>=6.0.2",
  "rich>=14.0.0",
  "typer>=0.16.0",
]

[project.optional-dependencies]
dev = [
  "mkdocs>=1.6.0",
  "mkdocs-gen-files>=0.5.0",
  "mkdocs-material>=9.6.0",
  "mkdocstrings[python]>=0.28.0",
  "mypy>=1.15.0",
  "pytest>=8.3.0",
  "ruff>=0.11.0",
  "types-PyYAML>=6.0.12.20250915",
]

[project.scripts]
operator = "agent_operator.cli.main:app"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
  ".operator/**",
  ".tmp-dist-check/**",
  ".tmp-install-check/**",
  ".uv-cache/**",
  ".venv/**",
  ".mypy_cache/**",
  ".pytest_cache/**",
  ".ruff_cache/**",
  "dist/**",
  "site/**",
  "**/__pycache__/**",
  "**/*.pyc",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agent_operator"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.13"
strict = true
follow_imports = "silent"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.8",
]
